fix warning and errors for android port